--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,42 +6,7 @@ footer {
   overflow: hidden;
   width: 100%;
   z-index: 99;
-  background: $black;
-  color: $primary;
-}
-.footer-wrapper {z-index: 2;}
-footer a {color: $primary;}
-footer a:hover {color: $white;}
-
-
-/* -------------------------------------------------------------------------------------------- */
-/* Footer Icon ---------------------------------------------- */
-/* -------------------------------------------------------------------------------------------- */
-svg.footer-icon {
-  position: relative;
-  margin-bottom: 16px;
-}
-svg.footer-icon polygon {
-  fill: $secondary;
-  transform: translateX(0);
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-svg.footer-icon:hover polygon {
-  transform: translateX(-6px);
-}
-svg.footer-icon path {
-  fill: $white;
-  transform: translateX(0);
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-svg.footer-icon:hover path {
-  transform: translateX(6px);
+  background: $primary;
 }
 
 
