--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -27,7 +27,7 @@ body {
   font-size: 21px;
   line-height: 1.6em;
   font-weight: 400;
-  background: $black;
+  background: $primary;
   color: $black;
 }
 #container {
